Show only appointments in the future when booking

--- a/core/templates/core/book_appointment.html
+++ b/core/templates/core/book_appointment.html
@@ -82,6 +82,9 @@
             slotMaxTime: "18:01:00",
             timeZone: 'UTC',
             hiddenDays: [0], // Sundays closed!
+            validRange: {
+                start: new Date() // Prevent navigation to past dates
+            },
             headerToolbar: {
                 left: 'prev,next today',
                 center: 'title',
