--- a/booking_system/templates/registration/register.html
+++ b/booking_system/templates/registration/register.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Register - Dog Booking System</title>
 </head>
 
 <body>
-    <h2>Login</h2>
+    <h2>Create Account</h2>
 
     {% if messages %}
     {% for message in messages %}
@@ -22,12 +22,12 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Log in</button>
+        <button type="submit">Create Account</button>
     </form>
 
     <p>
-        Don't have an account?
-        <a href="{% url 'register' %}">Register here</a>
+        Already have an account?
+        <a href="{% url 'login' %}">Login here</a>
     </p>
 </body>
 
